test/files/neg/t3769.scala
object Test {
  val x = <b> <c><a></c> {"text"} </b>
}
